--- a/beshop 합치는중/beshop/src/main/webapp/css/style.css
+++ b/beshop 합치는중/beshop/src/main/webapp/css/style.css
@@ -1074,7 +1074,7 @@ textarea.input {
   opacity: 1;
   visibility: visible;
 }
-
+.
 /*----------------------------*\
 	Widget product
 \*----------------------------*/
@@ -1466,147 +1466,265 @@ textarea.input {
 	Product details
 \*----------------------------*/
 
+/*=========================================================
+	08 -> PRODUCT DETAILS PAGE
+===========================================================*/
+
+/*----------------------------*\
+	Product view
+\*----------------------------*/
+
+#product-main-img .slick-prev {
+    -webkit-transform: translateX(-15px);
+    -ms-transform: translateX(-15px);
+    transform: translateX(-15px);
+    left: 15px;
+}
+
+#product-main-img .slick-next {
+    -webkit-transform: translateX(15px);
+    -ms-transform: translateX(15px);
+    transform: translateX(15px);
+    right: 15px;
+}
+
+#product-main-img .slick-prev,
+#product-main-img .slick-next {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+}
+
+#product-main-img:hover .slick-prev,
+#product-main-img:hover .slick-next {
+    -webkit-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    transform: translateX(0%);
+    opacity: 1;
+    visibility: visible;
+}
+
+#product-main-img .zoomImg {
+    background-color: #FFF;
+}
+
+#product-imgs .product-preview {
+    margin: 0px 5px;
+    border: 1px solid #E4E7ED;
+}
+
+#product-imgs .product-preview.slick-current {
+    border-color: #D10024;
+}
+
+#product-imgs .slick-prev {
+    top: -20px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+#product-imgs .slick-next {
+    top: calc(100% - 20px);
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+#product-imgs .slick-prev:before {
+    content: "\f106";
+}
+
+#product-imgs .slick-next:before {
+    content: "\f107";
+}
+
+.product-preview img {
+    width: 100%;
+}
+
+/*----------------------------*\
+	Product details
+\*----------------------------*/
+
 .product-details .product-name {
-  text-transform: uppercase;
-  font-size: 18px;
+    text-transform: uppercase;
+    font-size: 18px;
 }
 
 .product-details .product-rating {
-  display: inline-block;
-  margin-right: 15px;
+    display: inline-block;
+    margin-right: 15px;
 }
 
-.product-details .product-rating>i {
-  color: #E4E7ED;
+.product-details .product-rating > i {
+    color: #E4E7ED;
 }
 
-.product-details .product-rating>i.fa-star {
-  color: #D10024;
+.product-details .product-rating > i.fa-star {
+    color: #D10024;
 }
 
 .product-details .review-link {
-  font-size: 12px;
+    font-size: 12px;
 }
 
 .product-details .product-price {
-  display: inline-block;
-  font-size: 24px;
-  margin-top: 10px;
-  margin-bottom: 15px;
-  color: #D10024;
+    display: inline-block;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    color: #D10024;
 }
 
 .product-details .product-price .product-old-price {
-  font-size: 70%;
-  font-weight: 400;
-  color: #8D99AE;
+    font-size: 70%;
+    font-weight: 400;
+    color: #8D99AE;
 }
 
 .product-details .product-available {
-  font-size: 12px;
-  text-transform: uppercase;
-  font-weight: 700;
-  margin-left: 30px;
-  color: #D10024;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-left: 30px;
+    color: #D10024;
 }
 
 .product-details .product-options {
-  margin-top: 30px;
-  margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .product-details .product-options label {
-  font-weight: 500;
-  font-size: 12px;
-  text-transform: uppercase;
-  margin-right: 15px;
-  margin-bottom: 0px;
+    font-weight: 500;
+    font-size: 12px;
+    text-transform: uppercase;
+    margin-right: 15px;
+    margin-bottom: 0px;
 }
 
 .product-details .product-options .input-select {
-  width: 90px;
+    width: 90px;
 }
 
 .product-details .add-to-cart {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .product-details .add-to-cart .add-to-cart-btn {
-  position: relative;
-  border: 2px solid transparent;
-  height: 40px;
-  padding: 0 30px;
-  background-color: #ef233c;
-  color: #FFF;
-  text-transform: uppercase;
-  font-weight: 700;
-  border-radius: 40px;
-  -webkit-transition: 0.2s all;
-  transition: 0.2s all;
+    position: relative;
+    border: 2px solid transparent;
+    height: 40px;
+    padding: 0 30px;
+    background-color: #ef233c;
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight: 700;
+    border-radius: 40px;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
 }
 
-.product-details .add-to-cart .add-to-cart-btn>i {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 40px;
-  height: 40px;
-  line-height: 38px;
-  color: #D10024;
-  opacity: 0;
-  visibility: hidden;
+.product-details .add-to-cart .add-to-cart-btn > i {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    line-height: 38px;
+    color: #D10024;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .product-details .add-to-cart .add-to-cart-btn:hover {
-  background-color: #FFF;
-  color: #D10024;
-  border-color: #D10024;
-  padding: 0px 30px 0px 50px;
+    background-color: #FFF;
+    color: #D10024;
+    border-color: #D10024;
+    padding: 0px 30px 0px 50px;
 }
 
-.product-details .add-to-cart .add-to-cart-btn:hover>i {
-  opacity: 1;
-  visibility: visible;
+.product-details .add-to-cart .add-to-cart-btn:hover > i {
+    opacity: 1;
+    visibility: visible;
+}
+.product-details .add-to-cart .buy-now-btn  {
+    position: relative;
+    border: 2px solid transparent;
+    height: 40px;
+    padding: 0 30px;
+    background-color: #ef233c;
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight: 700;
+    border-radius: 40px;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+}
+.product-details .add-to-cart .buy-now-btn > i {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    line-height: 38px;
+    color: #D10024;
+    opacity: 0;
+    visibility: hidden;
+}
+.product-details .add-to-cart .buy-now-btn:hover {
+    background-color: #FFF;
+    color: #D10024;
+    border-color: #D10024;
+    padding: 0px 30px 0px 50px;
+}
+
+.product-details .add-to-cart .buy-now-btn:hover > i {
+    opacity: 1;
+    visibility: visible;
 }
 
 .product-details .add-to-cart .qty-label {
-  display: inline-block;
-  font-weight: 500;
-  font-size: 12px;
-  text-transform: uppercase;
-  margin-right: 15px;
-  margin-bottom: 0px;
+    display: inline-block;
+    font-weight: 500;
+    font-size: 12px;
+    text-transform: uppercase;
+    margin-right: 15px;
+    margin-bottom: 0px;
 }
 
 .product-details .add-to-cart .qty-label .input-number {
-  width: 90px;
-  display: inline-block;
+    width: 90px;
+    display: inline-block;
 }
 
 .product-details .product-btns li {
-  display: inline-block;
-  text-transform: uppercase;
-  font-size: 12px;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 12px;
 }
 
-.product-details .product-btns li+li {
-  margin-left: 15px;
+.product-details .product-btns li + li {
+    margin-left: 15px;
 }
 
 .product-details .product-links {
-  margin-top: 15px;
+    margin-top: 15px;
 }
 
 .product-details .product-links li {
-  display: inline-block;
-  text-transform: uppercase;
-  font-size: 12px;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 12px;
 }
 
-.product-details .product-links li+li {
-  margin-left: 10px;
+.product-details .product-links li + li {
+    margin-left: 10px;
 }
-
 /*----------------------------*\
 	 Product tab
 \*----------------------------*/
